--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,22 @@
 {
   "name": "frontend",
   "version": "1.0.0",
+  "type": "module",
+  "private": true,
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
-    "lint": "eslint ."
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.0.0"
   }
 }
