--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.4.21",
+    "serve": "^14.2.4",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.0"
   }
