--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^13.2.0",
     "openai": "^4.94.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "xlsx": "^0.18.5"
   }
 }
